cmake_minimum_required(VERSION 3.7.2)
set(CMAKE_CXX_STANDARD 17)

project(jarl)

option(NO_GENERATE "don't generate code")
option(NO_EXECUTE "don't execute code")
option(PRINT_LEXEMES "print lexer output")
option(PRINT_AST "print parser output")
option(PRINT_CODE "print code generator output")
option(PRINT_REFCOUNTS "print increments and decrements of reference counts")
option(PRINT_OP "print the op codes executed")
option(PRINT_STACK "print the stack between operations")
option(PRINT_ERROR_JUMPS "print error jumps")
option(MONITOR_ARRAY_ALLOCS "print all allocation operations for arrays")
option(MONITOR_STRING_ALLOCS "print all allocation operations for strings")

if(NO_GENERATE)
  add_compile_definitions(NO_GENERATE)
endif(NO_GENERATE)
if(NO_EXECUTE)
  add_compile_definitions(NO_EXECUTE)
endif(NO_EXECUTE)
if(PRINT_LEXEMES)
  add_compile_definitions(PRINT_LEXEMES)
endif(PRINT_LEXEMES)
if(PRINT_AST)
  add_compile_definitions(PRINT_AST)
endif(PRINT_AST)
if(PRINT_CODE)
  add_compile_definitions(PRINT_CODE)
endif(PRINT_CODE)
if(PRINT_REFCOUNTS)
  add_compile_definitions(PRINT_REFCOUNTS)
endif(PRINT_REFCOUNTS)
if(PRINT_OP)
  add_compile_definitions(PRINT_OP)
endif(PRINT_OP)
if(PRINT_STACK)
  add_compile_definitions(PRINT_STACK)
endif(PRINT_STACK)
if(PRINT_ERROR_JUMPS)
  add_compile_definitions(PRINT_ERROR_JUMPS)
endif(PRINT_ERROR_JUMPS)
if(MONITOR_ARRAY_ALLOCS)
  add_compile_definitions(MONITOR_ARRAY_ALLOCS)
endif(MONITOR_ARRAY_ALLOCS)
if(MONITOR_STRING_ALLOCS)
  add_compile_definitions(MONITOR_STRING_ALLOCS)
endif(MONITOR_STRING_ALLOCS)

include_directories(bindings)
file(GLOB SOURCES "libjarl/*.cpp")

add_compile_options(-fno-exceptions)

add_library(libjarl STATIC ${SOURCES})
